fixed spacing issue with the gallery

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,6 @@ header {
 }
 
 #logo {
-    
     text-align: center;
 }
 
@@ -66,7 +65,6 @@ nav li {
 }
 
 nav {
-    
     text-align: center;
     padding: 10px;
     margin: 60px 0 0;
@@ -75,6 +73,10 @@ nav {
 nav a {
     padding: 15px 10px;
     font-weight: 700;
+}
+
+nav ul {
+    padding: 0px;
 }
 
 
@@ -128,7 +130,10 @@ PAGE: CONTACT
     
 }
 
-
+#gallery {
+    margin: 0px;
+    padding: 0px;
+}
 
 
 
